test/invalid/datetime/second-over.cpp
TEST(invalid_datetime_tests, test_second_over)
{
    const string toml("# time-second     = 2DIGIT  ; 00-58, 00-59, 00-60 based on leap second\n#                           ; rules\nd = 2006-01-01T00:00:61-00:00\n", 137);

    const vector<Error> expected = {
        { 128, 3, 22, "Second must be between 00 and 59 inclusive but value was: 61" },
    };

    assert_errors(toml, expected);
}
